Fix translations and readability

--- a/src/app/modules/shared/components/top-nav/top-nav.component.scss
+++ b/src/app/modules/shared/components/top-nav/top-nav.component.scss
@@ -107,7 +107,7 @@
   display: inline-flex;
   border: 1px solid white;
 
-  &:last-child {
+  &:last-child:not(:only-child) {
     margin-left: rem(16);
   }
 }
